--- a/app/assets/stylesheets/material-kit.css
+++ b/app/assets/stylesheets/material-kit.css
@@ -2110,7 +2110,7 @@ legend {
   line-height: 1.42857;
 }
 .navbar, .navbar.navbar-default {
-  background-color: #0061ff;
+  background-color: #008489;
   color: #ffffff;
 }
 .navbar .navbar-form .form-group input.form-control::-moz-placeholder,
