--- a/app/assets/stylesheets/scss/suggest_index.scss
+++ b/app/assets/stylesheets/scss/suggest_index.scss
@@ -13,6 +13,10 @@
 
   .carousel-card {
 
+    img {
+      // position: absolute;
+      max-height: 273.75px;
+    }
     .tags {
       text-transform: uppercase;
       color: $blue-ish;
